# juselius.github.io

./: .gitignore  LICENSE  README.md  Site.cabal  about.html  about.md  archive.html  contact.html  contact.md  index.html  site.hs  stack.yaml
css/: blog.css  default.css  syntax.css
posts/: 2015-08-23-example.html  2019-12-03-fsharp-authentication-oid.html  2019-12-03-fsharp-authentication-oid.md
templates/: default.html
