name:                Site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/juselius/Site#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Juselius
maintainer:          jonas.juselius@itpartner.no
copyright:           Serit IT Partner Tromsø AS
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
